test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/b_dependency.sw
library bar;

pub enum Bar {
    Baz: bool,
}