test/src/e2e_vm_tests/test_programs/should_fail/recursive_enum/src/main.sw
library;

enum E {
    Eins: bool,
    Zwei: u64,
    Drei: E,
}
